<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text_bible">Bible</string>
    <string name="text_old_testament">Old Testament</string>
    <string name="text_new_testament">New Testament</string>
    <string name="text_old_testament_abbr">OT</string>
    <string name="text_new_testament_abbr">NT</string>

    <string name="app_name">@string/text_bible</string>

    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_highlights">Highlights</string>
    <string name="title_notes">Notes</string>
    <string name="title_reading_progress">Reading progress</string>
    <string name="title_settings">Settings</string>
    <string name="title_strong_number">Strong\'s numbers</string>
    <string name="title_translation_management">Translations</string>

    <string name="header_available_translations">Available for download</string>

    <string name="toast_downloaded">Successfully downloaded</string>
    <string name="toast_deleted">Translation deleted</string>
    <string name="toast_verses_copied">Copied to clipboard.</string>
    <string name="toast_search_result">%1$d result(s) found.</string>
    <string name="toast_backed_up">Successfully backed-up.</string>
    <string name="toast_restored">Successfully restored.</string>
    <string name="toast_unknown_error">Unknown error</string>

    <string name="action_more_translation">More</string>
    <string name="action_copy">Copy</string>
    <string name="action_share">Share</string>
    <string name="action_reading_progress">Reading progress</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_highlights">Highlights</string>
    <string name="action_notes">Notes</string>
    <string name="action_search">Search</string>
    <string name="action_search_include_old_testament">@string/text_old_testament</string>
    <string name="action_search_include_new_testament">@string/text_new_testament</string>
    <string name="action_search_include_bookmarks">Bookmarks</string>
    <string name="action_search_include_highlights">Highlights</string>
    <string name="action_search_include_notes">Notes</string>
    <string name="action_clear_search_history">Delete Search History</string>
    <string name="action_settings">Settings</string>

    <string name="dialog_title_no_translation_downloaded">No translation</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_downloading">Downloading…</string>
    <string name="dialog_title_installing">Installing…</string>
    <string name="dialog_title_deleting">Deleting…</string>
    <string name="dialog_title_wait">Please wait…</string>

    <string name="dialog_message_download_translation_confirmation">Download now?</string>
    <string name="dialog_message_delete_translation_confirmation">Delete now?</string>
    <string name="dialog_message_failed_to_load_translation_list">Failed to load translation list. Please check the network connection and try again.</string>
    <string name="dialog_message_failed_to_download">Failed to download. Please check the network connection and try again.</string>
    <string name="dialog_message_failed_to_delete">Failed to delete, retry?</string>
    <string name="dialog_message_failed_to_select_translation">Failed to select the translation, retry?</string>
    <string name="dialog_message_failed_to_select_chapter">Failed to select the chapter, retry?</string>
    <string name="dialog_message_failed_to_load_verses">Failed to load the verses, retry?</string>
    <string name="dialog_message_failed_to_search">Error occurred during search, retry?</string>
    <string name="dialog_message_failed_to_select_verse">Failed to select the verse, retry?</string>
    <string name="dialog_message_failed_to_navigate">Failed to navigate, retry?</string>
    <string name="dialog_message_failed_to_save_sort_order">Failed to save sort order, retry?</string>
    <string name="dialog_message_failed_to_load_reading_progress">Failed to load reading progress, retry?</string>
    <string name="dialog_message_failed_to_load_strong_numbers">Failed to load Strong\'s numbers, retry?</string>
    <string name="dialog_message_failed_to_load_annotated_verses">Failed to load, retry?</string>
    <string name="dialog_message_failed_to_load_verse_detail">Failed to load verse detail, retry?</string>

    <!--
    %1$s: month, %2$d: date, %3$d: year
     -->
    <string name="text_date">%1$s %2$d, %3$d</string>
    <string name="text_date_without_year">%1$s %2$d</string>

    <string name="text_pick_highlight_color">Select highlight color</string>
    <string name="text_highlight_color_none">None</string>
    <string name="text_highlight_color_yellow">Yellow</string>
    <string name="text_highlight_color_pink">Pink</string>
    <string name="text_highlight_color_orange">Orange</string>
    <string name="text_highlight_color_purple">Purple</string>
    <string name="text_highlight_color_red">Red</string>
    <string name="text_highlight_color_green">Green</string>
    <string name="text_highlight_color_blue">Blue</string>

    <string name="text_chapter_selection_old_testament">@string/text_old_testament_abbr</string>
    <string name="text_chapter_selection_new_testament">@string/text_new_testament_abbr</string>

    <string name="text_restore_from">Restore from</string>
    <string name="text_share_with">Share with</string>

    <string name="text_verse_comparison">Verses</string>
    <string name="text_note">Note</string>
    <string name="text_cross_references">Cross references</string>
    <string name="text_no_cross_references">Cross references not downloaded yet.\nClick to download now.</string>
    <string name="text_strong_number">Strong\'s numbers</string>
    <string name="text_no_strong_number">Strong\'s numbers not downloaded yet.\nClick to download now.\n\n(Experimental Feature)</string>

    <string name="text_no_bookmarks">No bookmarks yet.</string>
    <string name="text_no_highlights">No highlights yet.</string>
    <string name="text_no_notes">No notes yet.</string>

    <string name="text_continuous_reading">Consecutive Reading</string>
    <string name="text_continuous_reading_count">%1$d day(s)</string>
    <string name="text_chapters_read">Chapters Read</string>
    <string name="text_finished_books">Books Finished</string>
    <string name="text_finished_old_testament">@string/text_old_testament</string>
    <string name="text_finished_new_testament">@string/text_new_testament</string>

    <string name="settings_header_display">Display</string>
    <string name="settings_title_font_size">Font size</string>
    <string name="settings_title_keep_screen_on">Keep screen on</string>
    <string name="settings_title_night_mode">Night mode</string>
    <string name="settings_header_reading">Reading</string>
    <string name="settings_title_simple_reading">Simple reading</string>
    <string name="settings_title_hide_search_button">Hide search button</string>
    <string name="settings_title_consolidated_sharing">Consolidate verses when sharing</string>
    <string name="settings_title_default_highlight_color">Default highlight color</string>
    <string name="settings_header_backup_restore">Backup &amp; restore</string>
    <string name="settings_title_backup">Backup all my data</string>
    <string name="settings_title_restore">Restore</string>
    <string name="settings_header_about">About</string>
    <string name="settings_title_rate">Rate me on Google Play</string>
    <string name="settings_title_website">Visit website</string>
    <string name="settings_title_version">Version</string>

    <string name="settings_title_pick_night_mode">Select night mode</string>
    <string name="settings_text_night_mode_on">On</string>
    <string name="settings_text_night_mode_off">Off</string>
    <string name="settings_text_night_mode_system">Follow system</string>

    <string-array name="text_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="text_highlight_colors">
        <item>@string/text_highlight_color_none</item>
        <item>@string/text_highlight_color_yellow</item>
        <item>@string/text_highlight_color_pink</item>
        <item>@string/text_highlight_color_orange</item>
        <item>@string/text_highlight_color_purple</item>
        <item>@string/text_highlight_color_red</item>
        <item>@string/text_highlight_color_green</item>
        <item>@string/text_highlight_color_blue</item>
    </string-array>
    <string-array name="text_sort_order">
        <item>By date</item>
        <item>By book</item>
    </string-array>
    <string-array name="text_night_modes">
        <item>@string/settings_text_night_mode_on</item>
        <item>@string/settings_text_night_mode_off</item>
        <item>@string/settings_text_night_mode_system</item>
    </string-array>
</resources>
