<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_translations"
        android:title="@null"
        app:actionViewClass="androidx.appcompat.widget.AppCompatSpinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_reading_progress"
        android:title="@string/action_reading_progress"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bookmarks"
        android:title="@string/action_bookmarks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_highlights"
        android:title="@string/action_highlights"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notes"
        android:title="@string/action_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
